[package]
name = "cmaes-lbfgs"
version = "0.1.0"
edition = "2021"
authors = []
description = "High-performance CMA-ES and L-BFGS-B optimization algorithms for constrained and unconstrained problems"
license = "MIT"
repository = "https://github.com/shlomokraus/cmaes-lbfgs"
homepage = "https://github.com/shlomokraus/cmaes-lbfgs"
documentation = "https://docs.rs/cmaes-lbfgs"
readme = "README.md"
keywords = ["optimization", "cmaes", "lbfgs", "finance", "calibration"]
categories = ["algorithms", "mathematics", "science"]
exclude = ["target/", ".git/", "*.log"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
rayon = "1.8"
